--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# MAVEN #
+mvnw
+mvnw.cmd
+.mvn
+
+# INTELLIJ #
+.idea
+*.iml
+
 # Package Files #
 *.jar
 *.war
